# parla

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  gradio_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/corpus/: grammar_rules.json
data/eval/: dev.json  gold_essays.json
docs/: architecture.md  decisions.md  evaluation.md
eval/reports/: detection_report.md  errant_eval.md  scored_eval.md
src/parla/: config.py
src/parla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/parla/app/: streamlit_app.py
src/parla/eval/: errant_eval.py  harness.py  run_eval.py  scored_eval.py
src/parla/graph/: graph.py  state.py
src/parla/memory/: learner_profile.py
src/parla/retrieval/: index.py
src/parla/tools/: cefr_assessor.py  error_detection.py  exercise_gen.py  feedback.py  retrieval.py  tag_labels.py  verifier.py
tests/: test_detection.py  test_detection_spacy.py  test_errant_eval.py  test_eval.py  test_feedback.py  test_graph.py  test_llm_detect.py  test_retrieval.py  test_scored_eval.py  test_spell_chunk.py  test_tools.py
