[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parla"
version = "0.1.0"
description = "Evaluation-driven agentic English writing tutor (LangGraph · RAG · CEFR · GEC-benchmarked)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "pyspellchecker>=0.8",
    "pydantic-settings>=2.0",
    "streamlit>=1.36",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy", "errant", "ragas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E702"]  # allow compact "a; b" accumulator lines

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before imports that read env vars
"src/parla/app/streamlit_app.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
